[gd_scene load_steps=2 format=3 uid="uid://dsn6vnbh1y7qc"]

[ext_resource type="Script" path="res://Quests/QuestTest.gd" id="1_3mbc1"]

[node name="QuestTest" type="Panel"]
custom_minimum_size = Vector2(554, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1366.0
offset_bottom = -980.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3mbc1")

[node name="QuestName" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 110.0
offset_bottom = 27.0

[node name="QuestDesc" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 32.0
offset_right = 545.0
offset_bottom = 55.0

[node name="Quest" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 61.0
offset_right = 545.0
offset_bottom = 84.0
